Added a way to specify which user is reported and the reason why it is reported. Renamed IIInteractionAction.java to InteractionAction.java